Năm 3/HK8/Nhập môn DevOps/TH/Kubernates/sv_cicd/sv/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-app-service
  namespace: demo
spec:
  selector:
    app: node-app
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 3000
      nodePort: 31123
